fix naming bugs

--- a/template.jinja2
+++ b/template.jinja2
@@ -1,8 +1,8 @@
 ---
 #
-# iOS {{ which.capitalize() }} Mode Theme
+# iOS {{ which.capitalize() }} Mode Theme - {{ color }}
 #
-ios-{{ which }}-mode:
+ios-{{ which }}-mode-{{ color }}:
   # Global
   background-image: "center / cover no-repeat fixed url('data:image/jpeg;base64,{{ background_base64 }}')"
   primary-color: {{ primary_color }}  # from Apple systemOrange {{ which }} mode
