generate active-state-color themes

--- a/template.jinja2
+++ b/template.jinja2
@@ -1,7 +1,7 @@
 #
 # iOS {{ which.capitalize() }} Mode Theme - {{ color }}
 #
-ios-{{ which }}-mode-{{ color }}:
+ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   # Global
   background-image: "center / cover no-repeat fixed url('data:image/jpeg;base64,{{ background_base64 }}')"
   primary-color: {{ primary_color }}  # from Apple systemOrange {{ which }} mode
