add sidebar-background-color: var(--primary-background-color)

--- a/template.jinja2
+++ b/template.jinja2
@@ -18,6 +18,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   disabled-text-color: "#555"  # XXX: https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/2
   text-dark-color: "#FFF"
   # Sidebar Menu
+  sidebar-background-color: var(--primary-background-color)
   sidebar-icon-color: var(--light-primary-color)
   sidebar-text-color: {{ sidebar_text_color }}
   sidebar-selected-background-color: var(--primary-background-color)
