--- a/template.jinja2
+++ b/template.jinja2
@@ -63,6 +63,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   paper-dialog-background-color: {{ paper_dialog_background_color }}
   paper-item-icon-color: {{ paper_item_icon_color }}  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: {{ more_info_header_background }}
+  lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
