see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30

--- a/template.jinja2
+++ b/template.jinja2
@@ -28,6 +28,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   state-icon-color: "#FFF"
   state-icon-active-color: {{ state_icon_active_color }}  # or make light icons yellow when active: rgba(255, 214, 10, 1)
   state-icon-unavailable-color: var(--disabled-text-color)
+  paper-item-icon-active-color: {{ state_icon_active_color }}  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
   paper-slider-knob-color: "#FFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
