add app-header-background-color: rgba(155, 155, 155, 0.25)

--- a/template.jinja2
+++ b/template.jinja2
@@ -65,6 +65,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   paper-item-icon-color: {{ paper_item_icon_color }}  # also should mini-media-player icon white (but doesn't work by itself)
   more-info-header-background: {{ more_info_header_background }}
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
+  app-header-background-color: rgba(155, 155, 155, 0.25)
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
