Fix code background editor color

--- a/template.jinja2
+++ b/template.jinja2
@@ -67,7 +67,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   lumo-body-text-color: var(--primary-text-color)  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
   app-header-background-color: {{ app_header_background_color }}
   markdown-code-background-color: {{ markdown_code_background_color }}
-  code-editor-background-color: var(--disabled-text-color)
+  code-editor-background-color: {{ code_editor_background_color }}
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
