fix color, see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/72#issuecomment-1059826842

--- a/template.jinja2
+++ b/template.jinja2
@@ -30,7 +30,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   state-icon-unavailable-color: var(--disabled-text-color)
   paper-item-icon-active-color: {{ state_icon_active_color }}  # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
   # Sliders
-  paper-slider-knob-color: "#FFF"
+  paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
   paper-slider-active-color: {{ paper_slider_active_color }}  # from Apple systemBlue {{ which }} mode
