--- a/template.jinja2
+++ b/template.jinja2
@@ -72,3 +72,9 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
   mini-media-player-icon-color: white
+  # Added for https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/72
+  mdc-text-field-fill-color: var(--card-background-color)
+  mdc-text-field-ink-color: var(--primary-text-color)
+  mdc-select-ink-color: var(--primary-text-color)
+  mdc-select-fill-color: var(--card-background-color)
+  mdc-select-label-ink-color: var(--primary-text-color)
