--- a/template.jinja2
+++ b/template.jinja2
@@ -88,18 +88,12 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   # TODO: Below contain alternatives that have been proposed in comments
   # If anyone can test out the lines in the comments and report
   # Which one looks better, that would be great!
-  mdc-text-field-fill-color: var(--card-background-color)
-  # mdc-text-field-fill-color: var(--ha-card-background)
-  mdc-select-fill-color: var(--card-background-color)
-  # mdc-select-fill-color: var(--ha-card-background)
-  input-label-ink-color: var(--secondary-text-color)
-  # input-label-ink-color: var(--primary-text-color)
-  input-disabled-ink-color: var(--secondary-text-color)
-  # input-disabled-ink-color: var(--disabled-text-color)
-  input-disabled-fill-color: var(--card-background-color)
-  # input-disabled-fill-color: var(--ha-card-background)
-  input-fill-color: var(--card-background-color)
-  # input-fill-color: var(--ha-card-background)
+  mdc-text-field-fill-color: var(--ha-card-background)
+  mdc-select-fill-color: var(--ha-card-background)
+  input-label-ink-color: var(--primary-text-color)
+  input-disabled-ink-color: var(--disabled-text-color)
+  input-disabled-fill-color: var(--ha-card-background)
+  input-fill-color: var(--ha-card-background)
   input-dropdown-icon-color: var(--primary-text-color)
   # input-dropdown-icon-color: var(--light-primary-color)
   input-idle-line-color: var(--secondary-text-color)
