remove unused entries and improve

--- a/template.jinja2
+++ b/template.jinja2
@@ -74,29 +74,15 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   mini-media-player-icon-color: white
   # Added for https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/72
   # TODO: add description for lines below. Suggested in https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/72
-  mdc-text-field-ink-color: var(--primary-text-color)
-  mdc-text-field-label-ink-color: var(--primary-text-color)
-  mdc-select-ink-color: var(--primary-text-color)
-  mdc-select-label-ink-color: var(--primary-text-color)
-  mdc-text-field-font-color: var(--primary-text-color)
-  mdc-select-idle-line-color: var(--secondary-text-color)
-  mdc-select-dropdown-icon-color: var(--primary-text-color)
-  mdc-select-hover-line-color: var(--secondary-text-color)
   input-ink-color: var(--primary-text-color)
-  input-disabled-label-ink-color: var(--disabled-text-color)
-  codemirror-property: var(--accent-color)
-  # TODO: Below contain alternatives that have been proposed in comments
-  # If anyone can test out the lines in the comments and report
-  # Which one looks better, that would be great!
-  mdc-text-field-fill-color: var(--ha-card-background)
-  mdc-select-fill-color: var(--ha-card-background)
+  input-fill-color: transparent
+  input-disabled-fill-color: transparent
   input-label-ink-color: var(--primary-text-color)
   input-disabled-ink-color: var(--disabled-text-color)
-  input-disabled-fill-color: var(--ha-card-background)
-  input-fill-color: var(--ha-card-background)
   input-dropdown-icon-color: var(--primary-text-color)
-  # input-dropdown-icon-color: var(--light-primary-color)
   input-idle-line-color: var(--secondary-text-color)
-  # input-idle-line-color: var(--card-background-color)
   input-hover-line-color: var(--secondary-text-color)
-  # input-hover-line-color: var(--light-primary-color)
+  codemirror-property: var(--accent-color)
+  mdc-select-fill-color: transparent
+  # TODO: does the line below do anything?
+  input-disabled-label-ink-color: var(--disabled-text-color)
