add ha-card-border-width as suggested in https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/82

--- a/template.jinja2
+++ b/template.jinja2
@@ -48,6 +48,7 @@ ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   ha-card-border-radius: 20px
   ha-card-background: {{  ha_card_background }}
   paper-card-background-color: var(--ha-card-background)
+  ha-card-border-width: 0  # https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/82#event-7732695357
   # Toggles
   paper-toggle-button-checked-button-color: "#484848"
   paper-toggle-button-checked-bar-color: "#484848"
